0.4/_sources/tutorials/template_tutorial.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "tutorials/template_tutorial.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_tutorials_template_tutorial.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_tutorials_template_tutorial.py:


Template Tutorial
=================

**Author:** `FirstName LastName <https://github.com/username>`_

**What you will learn**

* Item 1
* Item 2
* Item 3

**Prerequisites**

* PyTorch v2.0.0
* GPU ???
* Other items 3

.. GENERATED FROM PYTHON SOURCE LINES 24-36

Overview
--------

Describe Why is this topic important? Add Links to relevant research papers.

This tutorial walks you through the process of....

Steps
-----

Example code (the output below is generated automatically):


.. GENERATED FROM PYTHON SOURCE LINES 36-40

.. code-block:: Python

    import torch
    x = torch.rand(5, 3)
    print(x)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    tensor([[6.4982e-01, 4.7441e-01, 5.0580e-03],
            [9.5679e-01, 4.3508e-01, 7.0922e-01],
            [3.0751e-01, 6.1762e-01, 9.3489e-01],
            [3.4082e-01, 3.1626e-01, 3.1174e-01],
            [2.5470e-01, 8.7070e-04, 8.4964e-01]])




.. GENERATED FROM PYTHON SOURCE LINES 41-47

(Optional) Additional Exercises
-------------------------------

Add additional practice exercises for users to test their knowledge.
Example: `NLP from Scratch <https://pytorch.org/tutorials/intermediate/char_rnn_generation_tutorial.html#exercises>`__.


.. GENERATED FROM PYTHON SOURCE LINES 49-59

Conclusion
----------

Summarize the steps and concepts covered. Highlight key takeaways.

Further Reading
---------------

* Link1
* Link2


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.004 seconds)


.. _sphx_glr_download_tutorials_template_tutorial.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: template_tutorial.ipynb <template_tutorial.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: template_tutorial.py <template_tutorial.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: template_tutorial.zip <template_tutorial.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
